clusters/dev/istio/policies/argo-task-api-istio-peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: argo-task-api-istio
spec:
  mtls:
    mode: STRICT
