clusters/dev/istio/policies/notification-service-peerauthentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: notification-service
spec:
  mtls:
    mode: STRICT
