clusters/dev/istio/policies/notification-service-authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-task-api
  namespace: notification-service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: notification-service
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/argo-task-api-istio/sa/default
      to:
        - operation:
            ports:
              - "8000"
            methods:
              - POST
            paths:
              - /notifications/task-completed
